# sarvamai-conversation

./: .env.template  LICENSE  README.md  ai_conversation_buddy_app.py  app.py  human_conversation_app.py  pyproject.toml  requirements.txt  stt_translate_app.py
notebooks/: sarvam_pipeline_demo.ipynb
